--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 		<title>Jogo da velha</title>
 		<script src="jquery-3.6.3.min.js"></script>
+		<script src="game.js"></script>
 	</head>
 
 	<body>
@@ -19,40 +20,42 @@
 					<td align="center">
 						<img src="imagens/jogador_1.png">
 						<br>
-						<input type="text" maxlength="10" placeholder="Jogador 1" style="border: 0px;">
+						<input id="inserir_j1" type="text" maxlength="10" placeholder="Jogador 1" style="border: 0px;">
 					</td>
 					<td align="center">
-						<img src="imagens/iniciar.png">
+						<img id="btn_play" src="imagens/iniciar.png">
 					</td>
 					<td align="center">
 						<img src="imagens/jogador_2.png">
 						<br>
-						<input type="text" maxlength="10" placeholder="Jogador 1" style="border: 0px;">
+						<input id="inserir_j2" type="text" maxlength="10" placeholder="Jogador 1" style="border: 0px;">
 					</td>
 				</tr>
 			</table>
 		</div>
 
-		<div id="palco_jogo" style="margin-top: 50px; text-align: center;">
+		<div id="palco_jogo" style="display: none; margin-top: 50px; text-align: center;">
 			<div style="display: inline-block;">
 				<img src="imagens/jogador_1.png">
+				<br>
+				<span id="apelido_j1"></span>
 			</div>
 
 			<div style="display: inline-block;">
 				<table>
 					<tr>
 						<td style="border-bottom: solid 1px red; border-right: solid 1px red;">
-							<div style="width: 100px; height: 100px;">
+							<div class="jogada" id="a-1" style="width: 100px; height: 100px;">
 
 							</div>
 						</td>
 						<td style="border-bottom: solid 1px red; border-right: solid 1px red;">
-							<div style="width: 100px; height: 100px;">
+							<div class="jogada" id="a-2" style="width: 100px; height: 100px;">
 
 							</div>
 						</td>
 						<td style="border-bottom: solid 1px red;">
-							<div style="width: 100px; height: 100px;">
+							<div class="jogada" id="a-3" style="width: 100px; height: 100px;">
 
 							</div>
 						</td>
@@ -60,17 +63,17 @@
 
 					<tr>
 						<td style="border-bottom: solid 1px red; border-right: solid 1px red;">
-							<div style="width: 100px; height: 100px;">
+							<div class="jogada" id="b-1" style="width: 100px; height: 100px;">
 
 							</div>
 						</td>
 						<td style="border-bottom: solid 1px red; border-right: solid 1px red;">
-							<div style="width: 100px; height: 100px;">
+							<div class="jogada" id="b-2" style="width: 100px; height: 100px;">
 
 							</div>
 						</td>
 						<td style="border-bottom: solid 1px red">
-							<div style="width: 100px; height: 100px;">
+							<div class="jogada" id="b-3" style="width: 100px; height: 100px;">
 
 							</div>
 						</td>
@@ -78,17 +81,17 @@
 
 					<tr>
 						<td style="border-right: solid 1px red;">
-							<div style="width: 100px; height: 100px;">
+							<div class="jogada" id="c-1" style="width: 100px; height: 100px;">
 
 							</div>
 						</td>
 						<td style="border-right: solid 1px red;">
-							<div style="width: 100px; height: 100px;">
+							<div class="jogada" id="c-2" style="width: 100px; height: 100px;">
 
 							</div>
 						</td>
 						<td>
-							<div style="width: 100px; height: 100px;">
+							<div class="jogada" id="c-3" style="width: 100px; height: 100px;">
 
 							</div>
 						</td>
@@ -98,6 +101,8 @@
 
 			<div style="display: inline-block;">
 				<img src="imagens/jogador_2.png">
+				<br>
+				<span id="apelido_j2"></span>
 			</div>
 
 		</div>
